--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>AR.js OBJ Model Viewer</title>
-	<link rel="stylesheet" href="main.css">
+	<title>Markerless AR with A-Frame</title>
 	<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-	<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.js"></script>
+	<script src="https://cdn.rawgit.com/aframevr/aframe/master/dist/aframe-master.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-<a-scene embedded arjs='sourceType: webcam;'>
-	<a-marker preset="hiro">
-		<a-entity
-				gltf-model="url(3d/1.glb)"
-				scale="0.5 0.5 0.5">
-		</a-entity>
-	</a-marker>
+<a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" xrweb="true">
+	<a-entity
+			gltf-model="url(3d/1.glb)"
+			position="0 0 -5"
+			scale="1 1 1">
+	</a-entity>
 	<a-entity camera></a-entity>
 </a-scene>
 </body>
