--- a/index.html
+++ b/index.html
@@ -1,18 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Markerless AR with A-Frame</title>
-	<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-	<script src="https://cdn.rawgit.com/aframevr/aframe/master/dist/aframe-master.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>WebXR AR with GLB Model</title>
+	<style>
+		body { margin: 0; }
+		canvas { display: block; }
+	</style>
 </head>
-<body style="margin: 0; overflow: hidden;">
-<a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" xrweb="true">
-	<a-entity
-			gltf-model="url(3d/1.glb)"
-			position="0 0 -5"
-			scale="1 1 1">
-	</a-entity>
-	<a-entity camera></a-entity>
-</a-scene>
+<body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r110/three.min.js"></script>
+<script src="https://unpkg.com/three@0.154.0/examples/jsm/webxr/ARButton.js"></script>
+<script src="https://unpkg.com/three@0.154.0/examples/jsm/loaders/GLTFLoader.js"></script>
+
+<script>
+	let scene, camera, renderer;
+
+	// Initialize the scene
+	function init() {
+		scene = new THREE.Scene();
+		camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.01, 20);
+
+		// Create WebGL renderer with XR support
+		renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+		renderer.setSize(window.innerWidth, window.innerHeight);
+		renderer.xr.enabled = true;
+		document.body.appendChild(renderer.domElement);
+
+		// GLTFLoader for loading GLB models
+		const loader = new THREE.GLTFLoader();
+		loader.load('3d/1.glb', function(gltf) {
+			const model = gltf.scene;
+			model.position.set(0, 0, -2);  // Adjust the position in front of the camera
+			model.scale.set(0.5, 0.5, 0.5);  // Adjust the scale as needed
+			scene.add(model);
+		}, undefined, function(error) {
+			console.error(error);
+		});
+
+		// Add AR button to enter AR mode
+		document.body.appendChild(ARButton.createButton(renderer));
+
+		// Handle window resizing
+		window.addEventListener('resize', onWindowResize, false);
+	}
+
+	// Handle window resizing
+	function onWindowResize() {
+		camera.aspect = window.innerWidth / window.innerHeight;
+		camera.updateProjectionMatrix();
+		renderer.setSize(window.innerWidth, window.innerHeight);
+	}
+
+	// Animation loop
+	function animate() {
+		renderer.setAnimationLoop(render);
+	}
+
+	// Render loop
+	function render() {
+		renderer.render(scene, camera);
+	}
+
+	// Initialize and start the AR session
+	init();
+	animate();
+</script>
 </body>
 </html>
+
