--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
 
 	// Initialize the scene
 	function init() {
+		// Create the scene
 		scene = new THREE.Scene();
+
+		// Create a camera
 		camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.01, 20);
 
-		// Create WebGL renderer with XR support
+		// Create a WebGL renderer and enable WebXR
 		renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+		renderer.setPixelRatio(window.devicePixelRatio);
 		renderer.setSize(window.innerWidth, window.innerHeight);
-		renderer.xr.enabled = true;
+		renderer.xr.enabled = true;  // Enable XR support for WebXR
+
+		// Add the renderer to the DOM
 		document.body.appendChild(renderer.domElement);
 
 		// GLTFLoader for loading GLB models
@@ -36,11 +42,22 @@
 			model.scale.set(0.5, 0.5, 0.5);  // Adjust the scale as needed
 			scene.add(model);
 		}, undefined, function(error) {
-			console.error(error);
+			console.error('Error loading model:', error);
 		});
 
 		// Add AR button to enter AR mode
-		document.body.appendChild(ARButton.createButton(renderer));
+		try {
+			const arButton = THREE.ARButton.createButton(renderer, { requiredFeatures: ['hit-test'] });
+			if (arButton) {
+				document.body.appendChild(arButton);
+				console.log('AR Button created successfully');
+			} else {
+				console.error('ARButton creation failed');
+			}
+		} catch (e) {
+			console.error('WebXR is not supported in this environment:', e);
+			alert('AR is not supported on this device or browser');
+		}
 
 		// Handle window resizing
 		window.addEventListener('resize', onWindowResize, false);
@@ -69,4 +86,3 @@
 </script>
 </body>
 </html>
-
