--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 	</style>
 </head>
 <body>
+<!-- Use the UMD versions of three.js and GLTFLoader -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r110/three.min.js"></script>
-<script src="https://unpkg.com/three@0.154.0/examples/jsm/webxr/ARButton.js"></script>
-<script src="https://unpkg.com/three@0.154.0/examples/jsm/loaders/GLTFLoader.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r110/examples/js/loaders/GLTFLoader.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r110/examples/js/webxr/ARButton.js"></script>
 
 <script>
 	let scene, camera, renderer;
