--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	</style>
 </head>
 <body>
-<!-- Use the UMD versions of three.js and GLTFLoader -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r110/three.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r110/examples/js/loaders/GLTFLoader.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r110/examples/js/webxr/ARButton.js"></script>
+<!-- Load the latest compatible version of three.js -->
+<script src="https://cdn.jsdelivr.net/npm/three@0.154.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/loaders/GLTFLoader.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/webxr/ARButton.js"></script>
 
 <script>
 	let scene, camera, renderer;
