--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	</style>
 </head>
 <body>
-<!-- Load the latest compatible version of three.js -->
-<script src="https://cdn.jsdelivr.net/npm/three@0.154.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/loaders/GLTFLoader.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/webxr/ARButton.js"></script>
+<!-- Load three.js r116 and its corresponding GLTFLoader and ARButton -->
+<script src="https://cdn.jsdelivr.net/npm/three@0.116.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.116.0/examples/js/loaders/GLTFLoader.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.116.0/examples/js/webxr/ARButton.js"></script>
 
 <script>
 	let scene, camera, renderer;
@@ -93,3 +93,4 @@
 </script>
 </body>
 </html>
+
