--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
 <!-- Load three.js r116 and its corresponding GLTFLoader and ARButton -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.116.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.116.0/examples/js/loaders/GLTFLoader.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.116.0/examples/js/webxr/ARButton.js"></script>
+<script src="libs/ARButton.js"></script> <!-- Replace with the actual path -->
+<script src="libs/GLTFLoader.js"></script> <!-- Replace with the actual path -->
+
 
 <script>
 	let scene, camera, renderer;
