--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 	</style>
 </head>
 <body>
-<!-- Load three.js r116 and its corresponding GLTFLoader and ARButton -->
-<script src="https://cdn.jsdelivr.net/npm/three@0.116.0/build/three.min.js"></script>
+<!-- Load three.js r149 and its corresponding GLTFLoader and ARButton -->
+<script src="https://cdn.jsdelivr.net/npm/three@0.149.0/build/three.min.js"></script>
 <script src="libs/ARButton.js"></script> <!-- Replace with the actual path -->
 <script src="libs/GLTFLoader.js"></script> <!-- Replace with the actual path -->
-
 
 <script>
 	let scene, camera, renderer;
@@ -47,25 +46,12 @@
 			console.error('Error loading model:', error);
 		});
 
-		// Check if AR is supported and create AR button
-		if (navigator.xr) {
-			navigator.xr.isSessionSupported('immersive-ar').then((supported) => {
-				if (supported) {
-					const arButton = THREE.ARButton.createButton(renderer, { requiredFeatures: ['hit-test'] });
-					document.body.appendChild(arButton);
-					console.log('AR Button created successfully');
-				} else {
-					console.log('AR not supported on this device/browser');
-					alert('AR is not supported on this device or browser');
-				}
-			}).catch((error) => {
-				console.error('Error during AR support check:', error);
-				alert('Error occurred while checking for AR support. See the console for details.');
-			});
-		} else {
-			console.error('WebXR not supported in this environment.');
-			alert('WebXR is not supported in this browser.');
-		}
+		// Create ARButton and check for AR support
+		document.body.appendChild(THREE.ARButton.createButton(renderer, {
+			requiredFeatures: ['hit-test'],
+			optionalFeatures: ['dom-overlay'],
+			domOverlay: { root: document.body }
+		}));
 
 		// Handle window resizing
 		window.addEventListener('resize', onWindowResize, false);
@@ -94,3 +80,4 @@
 </script>
 </body>
 </html>
+
