--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 <script type="module">
 	// Import necessary modules for Three.js r149
-	import * as THREE from './libs/three.module.js';   // Ensure this is the correct path to your local three.js module
-	import { ARButton } from './libs/ARButton.js';     // Local path to ARButton
-	import { GLTFLoader } from './libs/GLTFLoader.js'; // Local path to GLTFLoader
+	import * as THREE from 'libs/three.module.js';   // Ensure this is the correct path to your local three.js module
+	import { ARButton } from 'libs/ARButton.js';     // Local path to ARButton
+	import { GLTFLoader } from 'libs/GLTFLoader.js'; // Local path to GLTFLoader
 
 	let scene, camera, renderer;
 
