--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 <script type="module">
-	// Import necessary modules for Three.js r149
-	import * as THREE from 'libs/three.module.js';   // Ensure this is the correct path to your local three.js module
-	import { ARButton } from 'libs/ARButton.js';     // Local path to ARButton
-	import { GLTFLoader } from 'libs/GLTFLoader.js'; // Local path to GLTFLoader
+	// Import necessary modules for Three.js r149 from local paths
+	import * as THREE from './libs/three.module.js';   // Ensure this is the correct path to your local three.js module
+	import { ARButton } from './libs/ARButton.js';     // Local path to ARButton
+	import { GLTFLoader } from './libs/GLTFLoader.js'; // Local path to GLTFLoader
 
 	let scene, camera, renderer;
 
@@ -80,4 +80,3 @@
 </script>
 </body>
 </html>
-
