--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <script type="module">
 	// Import necessary modules for Three.js r149 from local paths
-	import * as THREE from './libs/three.module.js';   // Ensure this is the correct path to your local three.js module
+	import * as THREE from './libs/three.module.js';   // Ensure correct path relative to the location of your HTML file
 	import { ARButton } from './libs/ARButton.js';     // Local path to ARButton
 	import { GLTFLoader } from './libs/GLTFLoader.js'; // Local path to GLTFLoader
 
